--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,8 +66,8 @@ jobs:
 
       - run: ls dist
 
-      #- name: Upload to PyPI
-      #  uses: pypa/gh-action-pypi-publish@master
-      #  with:
-      #    user: __token__
-      #    password: ${{ secrets.PYPI_API_TOKEN }}
+      - name: Upload to PyPI
+       uses: pypa/gh-action-pypi-publish@master
+       with:
+         user: __token__
+         password: ${{ secrets.PYPI_API_TOKEN }}
