--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,15 +51,15 @@ jobs:
   deploy-pypi:
     runs-on: ubuntu-latest
     needs: [build-linux, build-win-and-mac]
-    if: github.ref == 'refs/heads/main' # We only deploy on master commits
+    if: github.ref == 'refs/heads/main' # We only deploy on main commits
 
     steps:
-      - uses: actions/download-artifact@master
+      - uses: actions/download-artifact@main
         with:
           name: linux-wheel
           path: dist
 
-      - uses: actions/download-artifact@master
+      - uses: actions/download-artifact@main
         with:
           name: windows-mac-wheels
           path: dist
@@ -67,7 +67,7 @@ jobs:
       - run: ls dist
 
       - name: Upload to PyPI
-       uses: pypa/gh-action-pypi-publish@master
+       uses: pypa/gh-action-pypi-publish@main
        with:
          user: __token__
          password: ${{ secrets.PYPI_API_TOKEN }}
