--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macOS-11, windows-2022]
+        os: [macOS-11, macOS-latest, windows-2022]
 
     steps:
       - uses: actions/checkout@v3
