--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,36 +22,6 @@ jobs:
           path: dist/*-manylinux*.whl
 
 
-  build-windows:
-    name: Build windows Python wheel
-    runs-on: windows-2022
-    env:
-      CC: cl
-      CXX: cl
-#      CIBW_BUILD_VERBOSITY: 3
-
-    steps:
-      - name: Clone UP Symk repository
-        uses: actions/checkout@v4
-
-      - uses: actions/setup-python@v3
-
-      - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.15.0
-
-      - uses: ilammy/msvc-dev-cmd@v1
-
-      - name: Build 64-bit wheel
-        run: python -m cibuildwheel --output-dir dist
-        env:
-          CIBW_BUILD: cp36-win_amd64
-
-      - uses: actions/upload-artifact@v3
-        with:
-          name: windows-wheel
-          path: dist/*.whl
-
-
   build-mac:
     name: Build macOS Python wheel
     runs-on: macOS-11
@@ -59,6 +29,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - uses: actions/setup-python@v3
+      
+      - name: Install packages
+        run: brew install cmake make autoconf automake gcc
 
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==2.15.0
@@ -112,54 +85,15 @@ jobs:
           PIP_FIND_LINKS='${{ github.workspace }}/dist' tox -e unified-planning
 
 
-  run-tox-test-windows:
-    name: Test wheels
-    needs: [build-windows]
-    runs-on: ${{ matrix.version.os }}
-    strategy:
-      matrix:
-        version:
-          - {os: windows-2019, python: '3.8'}
-          - {os: windows-2022, python: '3.10'}
-    steps:
-      - name: Clone repository
-        uses: actions/checkout@v4
-
-      - uses: actions/download-artifact@master
-        with:
-          name: windows-wheel
-          path: dist
-
-      - name: Install Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.version.python }}
-
-      - name: Install dependencies
-        run: |
-          pip3 install tox
-
-      - name: Run basic test 
-        run: |
-
-          cd misc/
-          $env:PIP_FIND_LINKS='${{ github.workspace }}\dist'; tox -e unified-planning
-
-
   deploy-pypi:
     runs-on: ubuntu-latest
-    needs: [run-tox-test, run-tox-test-windows]
+    needs: [run-tox-test]
     if: ${{ (github.repository == 'speckdavid/up-symk') && (github.ref == 'refs/heads/master') }}  # We only deploy on the correct repo and branch
 
     steps:
       - uses: actions/download-artifact@master
         with:
           name: linux-wheels
-          path: dist
-
-      - uses: actions/download-artifact@master
-        with:
-          name: windows-wheel
           path: dist
 
       - uses: actions/download-artifact@master
