--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: actions/setup-python@v3
       
       - name: Install packages
-        run: brew install cmake make autoconf automake gcc
+        run: brew install make automake
 
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==2.15.0
