--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,12 @@ on: push
 
 jobs:
   build-linux:
+    name: Build linux Python wheels
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Build manylinux Python wheels
         uses: RalfG/python-wheels-manylinux-build@v0.4.2-manylinux2014_x86_64
@@ -17,57 +18,93 @@ jobs:
 
       - uses: actions/upload-artifact@master
         with:
-          name: linux-wheel
+          name: linux-wheels
           path: dist/*-manylinux*.whl
 
-  build-win-and-mac:
-    name: Build wheels on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [macOS-11, macOS-12, macos-13, windows-2022]
 
+  build-mac:
+    name: Build macOS Python wheel
+    runs-on: macOS-11
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      # Used to host cibuildwheel
       - uses: actions/setup-python@v3
+      
+      - name: Install packages
+        run: brew install make automake
 
       - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.11.2
+        run: python -m pip install cibuildwheel==2.15.0
 
-      - name: Build wheels
+      - name: Build wheel
         run: python -m cibuildwheel --output-dir dist
-        # to supply options, put them in 'env', like:
-        # env:
-        #   CIBW_SOME_OPTION: value
 
       - uses: actions/upload-artifact@v3
         with:
-          name: windows-mac-wheels
+          name: mac-wheel
           path: dist/*.whl
+
+
+  run-tox-test:
+    name: Test wheels
+    needs: [build-linux, build-mac]
+    runs-on: ${{ matrix.version.os }}
+    strategy:
+      matrix:
+        version:
+          - {os: ubuntu-20.04, python: '3.8'}
+          - {os: ubuntu-22.04, python: '3.10'}
+          - {os: macOS-11, python: '3.10'}
+    steps:
+      - name: Clone repository
+        uses: actions/checkout@v4
+
+      - uses: actions/download-artifact@master
+        with:
+          name: linux-wheels
+          path: dist
+
+      - uses: actions/download-artifact@master
+        with:
+          name: mac-wheel
+          path: dist
+
+      - name: Install Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.version.python }}
+
+      - name: Install dependencies
+        run: |
+          pip3 install tox
+
+      - name: Run basic test 
+        run: |
+
+          cd misc/
+          PIP_FIND_LINKS='${{ github.workspace }}/dist' tox -e unified-planning
 
 
   deploy-pypi:
     runs-on: ubuntu-latest
-    needs: [build-linux, build-win-and-mac]
+    needs: [run-tox-test]
     if: ${{ (github.repository == 'speckdavid/up-symk') && (github.ref == 'refs/heads/master') }}  # We only deploy on the correct repo and branch
 
     steps:
       - uses: actions/download-artifact@master
         with:
-          name: linux-wheel
+          name: linux-wheels
           path: dist
 
       - uses: actions/download-artifact@master
         with:
-          name: windows-mac-wheels
+          name: mac-wheel
           path: dist
 
       - run: ls dist
 
       - name: Upload to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
+        uses: pypa/gh-action-pypi-publish@master
         with:
-        #  user: __token__
+          user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
